# sdl4cpp

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  SDL4Cpp.kdevelop  SDL4Cpp.kdevses  TODO  autogen.sh  configure.ac  sdl4cpp.pc.in
.anjuta/session/: anjuta.session  dock-layout.xml
docs/: CMakeLists.txt  Makefile.am  SDL4Cpp.doxy.in
include/: CMakeLists.txt  Makefile.am  SDL4Cpp.h  SDL4Cpp_audio.h  SDL4Cpp_cdrom.h  SDL4Cpp_common.h  SDL4Cpp_events.h  SDL4Cpp_joystick.h  SDL4Cpp_main.h  SDL4Cpp_mouse.h  SDL4Cpp_mt.h  SDL4Cpp_time.h  SDL4Cpp_video.h  SDL4Cpp_wm.h
include/SDL4Cpp/: SDL4Cpp-config.h.in  SDL4Cpp.h  SDL4Cpp_audio.h  SDL4Cpp_cdrom.h  SDL4Cpp_events.h  SDL4Cpp_joystick.h  SDL4Cpp_mouse.h  SDL4Cpp_mt.h  SDL4Cpp_rwops.h  SDL4Cpp_time.h  SDL4Cpp_video.h  SDL4Cpp_wm.h
include/SDL4Cpp/image/: SDL4Cpp_image.h
include/SDL4Cpp/mixer/: SDL4Cpp_mixer.h
include/image/: SDL4Cpp_image.h
include/mixer/: SDL4Cpp_mixer.h  SDL_mixer.h
src/: CMakeLists.txt  Makefile.am  SDL4Cpp_audio.cpp  SDL4Cpp_cdrom.cpp  SDL4Cpp_events.cpp  SDL4Cpp_joystick.cpp  SDL4Cpp_main.cpp  SDL4Cpp_mouse.cpp  SDL4Cpp_mt.cpp  SDL4Cpp_rwops.cpp  SDL4Cpp_time.cpp  SDL4Cpp_video.cpp  SDL4Cpp_wm.cpp
src/image/: SDL4Cpp_image.cpp
src/mixer/: SDL4Cpp_mixer.cpp
tests/: CMakeLists.txt  Makefile.am  TestCD.cpp  TestEvents.cpp  TestGL.cpp  TestJoystick.cpp  TestKeyboard.cpp  TestMouse.cpp  TestVideo.cpp  TestWM.cpp  Transform  Transform.cpp
tests/paddleball/: CMakeLists.txt  Makefile.am  ball.cpp  ball.h  computer.cpp  computer.h  main.cpp  paddle.cpp  paddle.h  score.cpp  score.h
