nobase_include_HEADERS = \
	SDL4Cpp/SDL4Cpp.h \
	SDL4Cpp/SDL4Cpp_audio.h \
	SDL4Cpp/SDL4Cpp_cdrom.h \
	SDL4Cpp/SDL4Cpp_events.h \
	SDL4Cpp/SDL4Cpp_joystick.h \
	SDL4Cpp/SDL4Cpp_main.h \
	SDL4Cpp/SDL4Cpp_mt.h \
	SDL4Cpp/SDL4Cpp_time.h \
	SDL4Cpp/SDL4Cpp_video.h \
	SDL4Cpp/SDL4Cpp_wm.h \
	SDL4Cpp/SDL4Cpp_mouse.h 
