nobase_include_HEADERS = \
	SDL4Cpp/SDL4Cpp.h \
	SDL4Cpp/SDL4Cpp_audio.h \
	SDL4Cpp/SDL4Cpp_cdrom.h \
	SDL4Cpp/SDL4Cpp_events.h \
	SDL4Cpp/SDL4Cpp_joystick.h \
	SDL4Cpp/SDL4Cpp_main.h \
	SDL4Cpp/SDL4Cpp_mt.h \
	SDL4Cpp/SDL4Cpp_rwops.h \
	SDL4Cpp/SDL4Cpp_time.h \
	SDL4Cpp/SDL4Cpp_video.h \
	SDL4Cpp/SDL4Cpp_wm.h \
	SDL4Cpp/SDL4Cpp_mouse.h

if HAVE_SDLIMAGE
nobase_include_HEADERS += SDL4Cpp/image/SDL4Cpp_image.h
endif

if HAVE_SDLMIXER
nobase_include_HEADERS += SDL4Cpp/mixer/SDL4Cpp_mixer.h
endif

